Changelog
=========

1.2.2 (unreleased)
------------------

- Adjusted CSS. #REC-984


1.2.1 (2018-05-25)
------------------

- Moved "Datenschutz" link to footer. Refs #17066


1.2.0 (2018-03-05)
------------------

- Adjusted background colours and SVG styling. Refs #16175
  [reinhardt]
- Removed obsolete commenting viewlet. Refs #16221
  [reinhardt]
- Hide login/register links. Refs #16221
  [reinhardt]
- New PDF cover logo. Refs #16175
  [reinhardt]
- Secondary navigation: Hide "benutzerrichtlinien". Refs #16175
  [reinhardt]


1.1.2 (2018-01-18)
------------------

- Added social media buttons. Refs #16159
  [reinhardt]
- Adapted CSS to new SVGs. Refs #16405
  [reinhardt]


1.1.1 (2017-11-16)
------------------

- Adjusted PDF logo. Refs #16044
  [reinhardt]
- Fixed portal URL in comments viewlet. Refs #16044
  [reinhardt]
- Removed original topic DDCs. Refs #16044
  [reinhardt]


1.1.0 (2017-09-21)
------------------

- Added custom logo link that points to navigation root. Refs #15816
  [reinhardt]
- Added Propylaeum logo in footer. Refs #15816
  [reinhardt]
- Custom favicon. Refs #15816
  [reinhardt]
- Custom explanation in comments viewlet (no email address). Refs #15699
  [reinhardt]


1.0.1 (2017-07-11)
------------------

- Make sure vocabularies are included. Refs #15448
  [reinhardt]


1.0.0 (2017-01-27)
------------------

- Initial release