@@ -1,3 +1,4 @@
+from recensio.theme.browser.homepage import HomepageView
 from recensio.theme.browser.pdfgen import GeneratePdfRecension
 
 
@@ -5,3 +6,8 @@ class GeneratePdfRecensionAltertum(GeneratePdfRecension):
     """Customized cover page
     """
     logo_main = '++resource++recensio.altertum.images/logo2_fuer-Deckblatt.jpg'
+
+
+class AltertumHomepageView(HomepageView):
+
+    review_languages = [u'']
