@@ -4,7 +4,8 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
-- Adjusted CSS. #REC-984
+- Adjusted CSS. #REC-984 #REC-992
+- Removed language distinction in home page boxes. #REC-992
 
 
 1.2.1 (2018-05-25)
